<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reminder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string-array name="drawer_titles">
        <item>New Reminder</item>
        <item>Pending Reminders</item>
        <item>Completed Reminders</item>
        <item>Settings</item>
    </string-array>
    <!-- Titles for other reasons -->
    <string name="edit_title">Edit Reminder</string>
    <string name="new_title">New Reminder</string>
    <string name="completed_title">Completed</string>
    <string name="pending_title">Pending</string>
    <string name="settings_title">Settings</string>

    <!-- Reminder Card Strings -->
    <string name="reminder_time_beginning">Today in the Morning</string>
    <string name="reminder_time_once">once</string>
    <string name="reminder_time_recurring">every</string>
    <string name="reminder_entry_edit">Edit</string>
    <string name="reminder_entry_share">Share</string>
    <string name="reminder_entry_dismiss">Dismiss</string>
    <string name="reminder_entry_delete">Delete</string>
    <string name="reminder_undo_dismiss">Dismissed</string>
    <string name="reminder_undo_delete">Reminder permanently deleted.</string>
    <string name="reminder_undo_label">Undo</string>
    <!-- Reminder Card Menu Strings -->
    <string name="action_share_reminder">@string/reminder_entry_share</string>
    <string name="action_edit_reminder">@string/reminder_entry_edit</string>
    <string name="action_delete_reminder">@string/reminder_entry_delete</string>
    <!-- Reminder Card Undo Strings -->
    <string name="list_card_undo_title">Undo</string>
    <plurals name="list_card_undo_items">
        <item quantity="one">@string/reminder_undo_dismiss</item>
        <item quantity="other">%d reminders dismissed.</item>
    </plurals>
    <!-- Reminder List Strings -->
    <string name="reminder_list_empty">No more reminders! Click the "+" button to add more.</string>

    <!-- New Reminder Strings -->
    <string name="new_reminder_hint">          What will you forget about?</string>
    <string name="new_reminder_button">Remind Me</string>
    <string name="new_reminder_details">Details</string>
    <string name="new_reminder_time">When</string>
    <string name="new_reminder_time_warning">This time is in the past. Please select a time in the future.</string>
    <!-- Recurring reminders -->
    <string name="new_reminder_recurrence_base">Repeats every</string>
    <string name="new_reminder_repeat">Repeat</string>
    <string name="new_reminder_repeat_daily">day</string>
    <string name="new_reminder_repeat_weekly">week</string>
    <string name="new_reminder_repeat_monthly">month</string>
    <string name="new_reminder_repeat_yearly">year</string>
    <string name="repeat_day">day</string>
    <string name="repeat_week">week</string>
    <string name="repeat_month">month</string>
    <string name="repeat_year">year</string>
    <string name="repeat_days">days</string>
    <string name="repeat_weeks">weeks</string>
    <string name="repeat_months">months</string>
    <string name="repeat_years">years</string>
    <!-- Edit reminder strings -->
    <string name="edit_reminder_save">Save</string>

    <!-- Menu Strings -->
    <string name="action_add_reminder">Add Reminder</string>
    <string name="action_cancel_reminder">Cancel</string>

    <!-- Spinner Day Strings -->
    <string-array name="spinner_day">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Specific date…</item>
    </string-array>
    <!-- Spinner Time Strings -->
    <string-array name="spinner_time">
        <item>@string/time_morning</item>
        <item>@string/time_noon</item>
        <item>@string/time_afternoon</item>
        <item>@string/time_evening</item>
        <item>@string/time_night</item>
        <item>Specific time…</item>
    </string-array>

    <!-- Time strings -->
    <string name="time_suffix_AM">AM</string>
    <string name="time_suffix_PM">PM</string>
    <!-- Days -->
    <string name="time_this">This</string>
    <string name="time_today">Today</string>
    <string name="time_tomorrow">Tomorrow</string>
    <string name="time_tonight">Tonight</string>
    <!-- times -->
    <string name="time_morning">Morning</string>
    <string name="time_noon">Noon</string>
    <string name="time_afternoon">Afternoon</string>
    <string name="time_evening">Evening</string>
    <string name="time_night">Night</string>
    <!-- time conjunctions -->
    <string name="time_at">at</string>
    <string name="time_in_the">in the</string>
    <string name="time_on">on</string>
    <string name="time_for">for</string>
    <string name="time_until">until</string>
    <string name="time_and">and</string>
    <string name="time_the">the</string>
    <string name="time_last">last</string>
    <string name="time_of_the_month">of the month</string>

    <!-- Debug strings -->
    <string name="reminder_example">This is a sample reminder. These will vary in length.</string>

    <!-- TOAST Messages -->
    <string name="toast_new_reminder_no_description">Please enter a description</string>
    <string name="toast_saving_reminder">Saving Reminder…</string>
    <string name="toast_new_reminder_created">Reminder Saved</string>

    <!-- Preference Strings -->
    <string name="pref_times_category">Timing</string>
    <string name="pref_times_category_summary">Set the time a reminder will alert you for general time periods</string>
    <string name="pref_times_bad_time_title">Whoops!</string>
    <string name="pref_times_bad_time_body1_before">The time you entered must be later than the time you have set for</string>
    <string name="pref_times_bad_time_body1_after">The time you entered must be earlier than the time you have set for</string>
    <string name="pref_times_bad_time_body2">Please choose a new time.</string>
    <string name="pref_times_bad_time_button">Okay</string>
    <string name="pref_snooze_category">Snoozing</string>
    <string name="pref_snooze_snooze_time">Snooze Amount</string>
    <string name="pref_snooze_error_message">The snooze time you entered is invalid.</string>

    <!-- Share Strings -->
    <string name="share_reminder_title">REMINDER</string>
    <string name="share_reminder_description">Description:</string>
    <string name="share_reminder_time">When:</string>

    <!-- Notification Strings -->
    <string name="notification_snooze_custom">Snooze...</string>
    <string name="notification_snooze_static">Snooze for</string>

    <!-- Snooze Strings -->
    <string name="snooze_hour">Hour</string>
    <string name="snooze_hours">Hours</string>
    <string name="snooze_min">Minute</string>
    <string name="snooze_mins">Minutes</string>
    <string name="snooze_second">Second</string>
    <string name="snooze_seconds">Seconds</string>

</resources>
