<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newNoteView"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/shadow"
    tools:context=".MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="24dp" >
        <TextView
            android:id="@+id/newReminderDetailText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/new_reminder_details"
            android:textStyle="italic"/>
        <EditText
            android:id="@+id/newReminderEditText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/newReminderDetailText"
            android:hint="@string/new_reminder_hint" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="24dp" >

        <TextView
            android:id="@+id/newReminderTimeText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/new_reminder_time"
            android:textStyle="italic"/>

        <LinearLayout
            android:id="@+id/newNoteReminderSpinnerView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/textview_background">
            <com.npaduch.reminder.AlwaysChangeSpinner
                android:id="@+id/newReminderDaySpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <View
                android:layout_width="48dp"
                android:layout_height="match_parent" />
            <com.npaduch.reminder.AlwaysChangeSpinner
                android:id="@+id/newReminderTimeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/newReminderCreateButton"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:textSize="22sp"
        android:background="@drawable/shape_textview_background"
        android:textColor="@android:color/white"
        android:text="@string/new_reminder_button"/>

</LinearLayout>