<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reminderListViewFrame"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/shadow"
    >

    <!-- Main card layout -->
    <RelativeLayout
        android:id="@+id/reminderListViewItem"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

       <TextView
           android:id="@+id/reminderDetailText"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginTop="0dp"
           android:layout_marginBottom="10dp"
           android:text="@string/reminder_example"
           android:layout_alignParentTop="true"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:background="@android:color/background_light"/>

       <View
            android:id="@+id/reminderDetailTimeDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/reminderDetailText"
            android:background="@color/app_color_theme"/>

        <TextView
            android:id="@+id/reminderTimeText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/reminder_time_beginning"
            android:layout_marginLeft="24dp"
            android:paddingBottom="8dp"
            android:layout_below="@id/reminderDetailTimeDivider"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/textview_medium_text"
            android:background="@android:color/background_light"/>

       <LinearLayout
           android:id="@+id/reminderExpanded"
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           android:layout_below="@id/reminderTimeText"
           android:paddingTop="10dp"
           android:paddingBottom="10dp"
           android:orientation="horizontal"
           android:visibility="gone"
           android:background="@color/app_color_theme">

           <TextView
               android:id="@+id/reminderEntryEdit"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:text="@string/reminder_entry_edit"
               android:paddingBottom="8dp"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:textSize="18sp"
               android:textColor="@color/white"/>

           <TextView
               android:id="@+id/reminderEntryShare"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:text="@string/reminder_entry_share"
               android:paddingBottom="8dp"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:textSize="18sp"
               android:textColor="@color/white"/>

           <TextView
               android:id="@+id/reminderEntryDismiss"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:text="@string/reminder_entry_dismiss"
               android:paddingBottom="8dp"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:textSize="18sp"
               android:textColor="@color/white"/>

       </LinearLayout>

    </RelativeLayout>
    <!-- Overflow button for dropdown menu -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:src="@drawable/ic_action_overflow_dark"/>
</FrameLayout>